--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,8 @@ sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=.
+sonar.sources=./src
 sonar.java.source=1.0
 sonar.java.binaries=./build
+
+sonar.junit.reportPaths=./report
