--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
 	<target name="test" depends="compile">
 		<junit printsummary="true" fork="true">
 			<classpath refid="classpath" />
-			<test name="hhtay.test.RectangleTests" todir="./report" outfile="TEST-result">
+			<test name="hhtay.test.RectangleTests" todir="./report" outfile="TEST-.result">
 				<formatter type="xml"/>
 			</test>
 		</junit>
