--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 		<pathelement location="${build}" />
 	</path>
 
-	<target name="init" depends="clean">
+	<target name="init">
 		<!-- Create the time stamp -->
 		<tstamp />
 		<!-- Create the build directory structure used by compile -->
@@ -42,7 +42,7 @@
 		</junit>
 	</target>
 	
-	<target name="dist" depends="compile" description="generate the distribution">
+	<target name="dist" depends="clean,compile" description="generate the distribution">
 		<!-- Create the distribution directory -->
 		<mkdir dir="${dist}/lib" />
 
