--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,8 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=./src
+sonar.tests=./tests
+
 sonar.java.source=1.0
 sonar.java.binaries=./build
 
